tests/bigint/invalid05.js
type InvalidE = 2e9n; // error
